redirect-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: redirect-service
spec:
  selector:
    app: redirect
  ports:
  - protocol: TCP
    port: 5001
    targetPort: 5001
