ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: app.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: app-service
            port:
              number: 5000
  - host: redirect.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: redirect-service
            port:
              number: 5001
